[project]
name = "python-unified-system"
version = "0.1.0"
description = "A unified structure for consolidating Python source code."
requires-python = ">=3.10"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
pythonpath = ["src"]
addopts = "-q"
